# atr-grid

./: .gitignore  README.md  pyproject.toml  sync-atr-grid.ps1  项目总结_2026-06-10_515880交易系统dev.md
.github/workflows/: signal-515880.yml  (+5 more)
atr_grid/: AtrGridMenu.bat  SH515880_交易快照_20260420.md  SH515880_交易快照_20260422.md  __init__.py  __main__.py  backtest.py  cli.py  config.py  dashboard.py  data.py  data_snowball.py  engine.py  external.py  fund_eastmoney.py  hybrid.py  indicators.py  paper.py  regime.py  report.py  signal_engine.py  signal_report.py  交班手册.md  交班日志.md
core/: config_io.py  indicators.py  market_data.py  monitor_core.py  paths.py  xueqiu_session.py
dev/: README.md  __init__.py  __main__.py  config.py  datafeed.py  indicators.py
docs/: 04-25-Hybrid策略7日回测复盘-BB上轨锚定卖点为什么比纯ATR更适合我们以及卖早了其实是在买保险.md  04-25_SH515880标的认知_为什么它适合Hybrid策略_以及我们的核心持仓逻辑.md  04-25_打篮球理论与交易认知_价格上涨需要外力而下跌只需要地心引力_以及为什么高位减仓比抄底做T更重要.md  CHECKPOINT_2026-04-24_nasdaq.md  CHECKPOINT_2026-04-24_phase4.md  CHECKPOINT_2026-04-24_phase5.md  DEV_ROADMAP_2026-04-24.md  index.html  phase2_2_sweep_profile.md  phase3_1_asymmetric_ladder.md  phase3_3_stop_loss.md  phase4_trend_hybrid.md  总结.md  经验教训_2026-06-03_GitHub-Actions与Dev-Pages恢复.md  认知输出_2026-06-03_515880长期向上与Hybrid策略确认.md  认知输出_2026-06-03_dev-515880停更与恢复.md  评审意见_2026-06-10_项目总纲改进建议.md  项目总纲_2026-06-10_交易策略与技术方案.md  项目验收报告_2026-04-24.md
output/: baseline_backtest.json
scripts/: baseline_backtest.py  paper_daily.py  phase5_compare.py  profile_compare.py  replay_last_30d.py  scan_asymmetric_ladder.py  scan_stop.py  sweep_profile.py
(+166 files in other folders)
